# CineMate-V2

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  requirements_docker.txt
api/: app.py  schemas.py
app/: dashboard.py  new_users.json  streamlit_app.py  streamlit_app_02.py  streamlit_app_03.py  test.ipynb
db/: crud.py  database.py  init_db.py  models.py
notebook/: 01 EDA.ipynb  02 preprocessing.ipynb  03 baseline_SVD.ipynb  04 neural cf.ipynb  05 two tower.ipynb  06 ab_test.ipynb  07_business_impact.ipynb  08_bias_fairness.ipynb  09_recommendation_analysis.ipynb
src/: cf_model.py  chroma_db.py  content_model.py  dataset.py  debias.py  embeddings.py  evaluate.py  hybrid_model.py  precompute_recs.py  recommendation.py  train.py  tune_debias.py
