[project]
name = "cinemate-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "flask>=3.1.3",
    "gradio>=6.9.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<2.0",
    "pandas>=2.3.3",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "tensorflow>=2.21.0",
    "uvicorn>=0.42.0",
    "torch==2.7.1+cu118",
    "torchvision==0.22.1+cu118",
    "torchaudio==2.7.1+cu118",
    "plotly>=6.6.0",
    "dash>=4.1.0",
    "dash-bootstrap-components>=2.0.4",
    "sqlalchemy>=2.0.49",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
